--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "bcryptjs": "^2.4.3",
     "ejs": "^3.1.2",
+    "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.13",
